# shatter

./: Cargo.toml
examples/: mandelbrot.rs  wgsl.rs
shatter-macro/: Cargo.toml
shatter-macro/src/: lib.rs  shatter.rs  wgsl.rs
src/: bind_group.rs  buffer.rs  color.rs  compute.rs  entry_point.rs  id.rs  instance.rs  lib.rs  math.rs  pipeline.rs  texture.rs
