[package]
name = "shatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["shatter-macro"]

[dependencies]
anyhow = "1.0"
dashmap = "4.0"
once_cell = "1.8"
pollster = "0.2"
shatter-macro = { path = "shatter-macro" }
wgpu = "0.11"

[features]
default = []
webgl = ["wgpu/webgl"]