[package]
name = "shatter-macro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
naga = { version = "0.7", features = ["wgsl-in", "validate"] }
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"